hphp/hack/test/typecheck/asyncgen9.php.exp
File "asyncgen9.php", line 4, characters 16-20:
await can only be used inside async functions (NastCheck[3003])
